--- a/back-end/package.json
+++ b/back-end/package.json
@@ -1,16 +1,20 @@
 {
   "name": "typescript-back-template",
   "version": "1.0.0",
-  "type": "module",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon src/server.ts"
+    "test": "dotenv -e .env.test -- npx prisma migrate dev && dotenv -e .env.test -- npx prisma db seed && jest -i",
+    "build": "npx tsc && prisma generate && npx prisma migrate deploy && npx prisma db seed",
+    "start": "node ./dist/src/server.js",
+    "dev": "ts-node-dev --respawn --transpile-only --exit-child --ignore-watch node_modules ./src/server.ts "
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@swc/core": "^1.3.2",
+    "@swc/jest": "^0.2.22",
     "@types/cors": "^2.8.12",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.13",
@@ -22,14 +26,15 @@
     "eslint": "^7.32.0",
     "jest": "^28.0.3",
     "nodemon": "^2.0.12",
-    "prisma": "^3.13.0",
+    "prisma": "^4.3.1",
     "supertest": "^6.1.3",
     "ts-jest": "^28.0.0",
     "ts-node": "^10.7.0",
+    "ts-node-dev": "^2.0.0",
     "typescript": "^4.6.4"
   },
   "dependencies": {
-    "@prisma/client": "^3.13.0",
+    "@prisma/client": "^4.3.1",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
