--- a/back-end/package.json
+++ b/back-end/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "dotenv -e .env.test -- npx prisma migrate dev && dotenv -e .env.test -- npx prisma db seed && jest -i",
+    "test": "dotenv -e .env.test -- npx prisma migrate dev jest -i",
     "build": "npx tsc && prisma generate && npx prisma migrate deploy && npx prisma db seed",
     "start": "node ./dist/src/server.js",
     "dev": "ts-node-dev --respawn --transpile-only --exit-child --ignore-watch node_modules ./src/server.ts "
@@ -22,10 +22,17 @@
     "@types/joi": "^17.2.3",
     "@types/node": "^16.3.3",
     "@types/supertest": "^2.0.11",
+    "@typescript-eslint/eslint-plugin": "^5.36.0",
     "dotenv-cli": "^5.1.0",
-    "eslint": "^7.32.0",
-    "jest": "^28.0.3",
+    "eslint": "^8.23.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-config-airbnb-typescript": "^17.0.0",
+    "eslint-import-resolver-typescript": "^3.5.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "jest": "^28.0.0",
     "nodemon": "^2.0.12",
+    "prettier": "^2.7.1",
     "prisma": "^4.3.1",
     "supertest": "^6.1.3",
     "ts-jest": "^28.0.0",
