--- a/back-end/package.json
+++ b/back-end/package.json
@@ -41,6 +41,7 @@
     "typescript": "^4.6.4"
   },
   "dependencies": {
+    "@ngneat/falso": "^6.1.0",
     "@prisma/client": "^4.3.1",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
