--- a/back-end/package.json
+++ b/back-end/package.json
@@ -7,7 +7,7 @@
     "test": "dotenv -e .env.test jest -i --node_modules/.bin/jest",
     "build": "npx tsc && prisma generate && npx prisma migrate deploy && npx prisma db seed",
     "start": "node ./dist/src/server.js",
-    "dev": "ts-node-dev --respawn --transpile-only --exit-child --ignore-watch node_modules ./src/server.ts "
+    "dev": "NODE_ENV=dev ts-node-dev --respawn --transpile-only --exit-child --ignore-watch node_modules ./src/server.ts "
   },
   "keywords": [],
   "author": "",
