--- a/back-end/package.json
+++ b/back-end/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "dotenv -e .env.test jest -i --node_modules/.bin/jest",
+    "test": "dotenv -e .env.test -- jest --runInBand",
     "build": "npx tsc && prisma generate && npx prisma migrate deploy && npx prisma db seed",
     "start": "node ./dist/src/server.js",
     "dev": "NODE_ENV=dev ts-node-dev --respawn --transpile-only --exit-child --ignore-watch node_modules ./src/server.ts "
@@ -30,7 +30,7 @@
     "eslint-import-resolver-typescript": "^3.5.0",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-prettier": "^4.2.1",
-    "jest": "^28.0.0",
+    "jest": "^28.1.3",
     "nodemon": "^2.0.12",
     "prettier": "^2.7.1",
     "prisma": "^4.3.1",
