--- a/back-end/package.json
+++ b/back-end/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "dotenv -e .env.test -- jest --runInBand",
-    "build": "npx tsc && prisma generate && npx prisma migrate deploy && npx prisma db seed",
+    "build": "npx tsc && prisma generate && npx prisma migrate deploy",
     "start": "node ./dist/src/server.js",
     "dev": "NODE_ENV=dev ts-node-dev --respawn --transpile-only --exit-child --ignore-watch node_modules ./src/server.ts "
   },
